--- a/_posts/2019-12-30-the-us-narrative-today.html
+++ b/_posts/2019-12-30-the-us-narrative-today.html
@@ -1659,107 +1659,108 @@ stories:
   domain: http://www.themercury.com/
   link: https://themercury.com/news/national/tapper-says-hunter-biden-s-ukrainian-contract-stinks/video_9046db20-60fb-5ac0-843e-fb913d301e90.html
 images:
-- name: art-museum-art-museum-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-atari-missle.jpg
-- name: blossombar-really-hot-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-really-hot-file-00-00-00-00.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-copper-circuit.jpg
-- name: stalin-time-stainless-tree-clouds.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-stainless-tree-clouds.jpg
-- name: blossombar-plentiful-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-plentiful-file-00-00-50-62.jpg
-- name: nazi-invasion-downtown-sidewalk-washington.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-downtown-sidewalk-washington.jpg
-- name: rockingchair-rockingchair-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-gan-vogh.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-blue-circuit-4.jpg
-- name: bluelake-far-away-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-far-away-file-00-00-38-67.jpg
-- name: stories-new-49-127-800-500-0-max-0-1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-49-127-800-500-0-max-0-1--1.jpg
-- name: mistywoods-babyfoot-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-blue-brush.jpg
-- name: stories-new-cityscape-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-cityscape-copper-circuit.jpg
-- name: containership-containership-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-post-modern.jpg
-- name: carry-load-carryload-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-light-dali.jpg
-- name: powerlines-power-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-deep-connections.jpg
-- name: crow_purple_pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_purple_pond.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-yellow-collage.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-yellow-collage.JPG
-- name: gypsy-wagon-gypsywagon-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-far-away.jpg
-- name: oldhouse-oldhouse-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-space-pizza.jpg
-- name: bordercrossing-bordercrossing-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-oily-mcoilface.jpg
-- name: subway-subway-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-dark-dali.jpg
-- name: braceros-domingo-ulloa-city-vancouver-clouds.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-city-vancouver-clouds.jpg
-- name: lincoln-memorial-lincolnmemorial-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-satan-red.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-diego-rivera1.jpg
-- name: eduardo-eduardo-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-smooth-ride.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-crabapple.jpg
-- name: meadowbutterfly-meadow-butterfly-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-yellow-paper.jpg
-- name: rain-princess-DSC_0048.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0048.jpg
-- name: nyc-flag-nycflag-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-blue-granite.jpg
-- name: fence-fence-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-dark-soul.jpg
-- name: stalin-time-san-pedro-light-cities.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-san-pedro-light-cities.jpg
-- name: adam-smith-adam-smith-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-umberto-bocc.jpg
-- name: aws-s3-stories-new-15-190-800-500-0-max-0-1--5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-15-190-800-500-0-max-0-1--5.jpg
-- name: wind-mills-windmills-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-dark-rain.jpg
-- name: crow_oily_mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_oily_mcoilface.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-dali-two.jpg
-- name: aws-s3-stories-castle-on-hill-edinburgh-propaganda-leaflets.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-castle-on-hill-edinburgh-propaganda-leaflets.JPG
-- name: old-door-lock-old-door-lock-2-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-kand-two.jpg
-- name: downtown-trucksilo-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-ww2-color.jpg
-- name: curtain-curtain-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-rainbow-festival.jpg
-- name: power-lines-power-lines-empty-space-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-sand-paper.jpg
-- name: gypsymosaic-gypsy-eyes-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-colored-circuits.jpg
-- name: copper-circuit-trail-bridge-walking.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-trail-bridge-walking.jpg
-- name: stories-new-80-87-800-500-0-max-0--1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-80-87-800-500-0-max-0--1--1.jpg
-- name: san-francisco-street-view-san-francisco-street-view-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-crafty-painting.jpg
-- name: power-lines-power-lines-empty-space-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-alberto-giacometti.jpg
-- name: beach-clouds-lifeguard-beachclouds-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-satan-red.jpg
-- name: oldhouse-oldhouse-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-horiz-circuit.jpg
-- name: bf-skinner-train-small-town-station.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-train-small-town-station.jpg
-- name: old-cabin-oldcabin-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-atari-missle.jpg
-- name: server-cloud-server-racks-door-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-kandinsky-bv.jpg
+- name: server-cloud-server-racks-clouds-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-marcel-duchamp.jpg
+- name: udnie-IMG_3469.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_3469.jpg
+- name: store-on-corner-store-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-gan-vogh.jpg
+- name: old-church-oldchurch-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-dark-soul.jpg
+- name: death-valley-death-valley-national-park-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-cinnamon-rolls.jpg
+- name: powerlines-power-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-creativity.jpg
+- name: berlinwall-DSC-0084-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-post-modern.jpg
+- name: wind-mills-windmills-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-clean-view.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-alberto-giacometti.jpg
+- name: stalin-time-grain-ship-docking-grass.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-grain-ship-docking-grass.jpg
+- name: oldhouse-granaryfield-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-blue-granite.jpg
+- name: braceros-domingo-ulloa-oxford-old-building.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-oxford-old-building.jpg
+- name: aws-s3-stories-catacombs-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-catacombs-copper-circuit-2.jpg
+- name: beach-clouds-lifeguard-beachclouds-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-light-dali.jpg
+- name: wind-mills-windmills-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-dry-skin.jpg
+- name: nyc-flag-nycflag-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-purple-storm.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-brush.jpg
+- name: rain-princess-downtown-building.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-downtown-building.jpg
+- name: old-granary-field-oldhouse-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-sunday.jpg
+- name: server-cloud1-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud1-propaganda-leaflets.jpg
+- name: copper-circuit-working-on-railroad-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-working-on-railroad-2.jpg
+- name: powerlines-power-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-dark-rain.jpg
+- name: castle-wall-DSC-0067-really-hot.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-really-hot.JPG
+- name: nazi-invasion-white-house-press-room-flag.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-white-house-press-room-flag.jpg
+- name: rockingchair-face-2-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-constitution.jpg
+- name: power-lines-power-lines-empty-space-copper-circuit copy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-copper-circuit
+    copy.jpg
+- name: machine-road-machine-road-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-dali-two.jpg
+- name: braceros-domingo-ulloa-city-clouds-waterfront.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-city-clouds-waterfront.jpg
+- name: aws-s3-stories-shipping-energy-trucking.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-shipping-energy-trucking.jpg
+- name: border-crossing-bordercrossing-space-pizza.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-space-pizza.png
+- name: rain-princess-IMG_7288.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_7288.jpg
+- name: old-school-house-old-schoolhouse-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-blue-granite.jpg
+- name: containership-containership-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-blue-brush.jpg
+- name: liberty-back-statue-liberty-back-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-oily-mcoilface.jpg
+- name: braceros-domingo-ulloa-please-do-not-feed-the-pigeon.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-please-do-not-feed-the-pigeon.jpg
+- name: statue-face-open-mouth-statue-face-open-mouth-cinnamon-rolls.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-cinnamon-rolls.png
+- name: oldcabin-oldcabin-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-purple-pond.jpg
+- name: crow-crow-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-crunch-paper.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-dry-skin.jpg
+- name: lincoln-memorial-lincolnmemorial-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-nazi-poster.jpg
+- name: abandonedbuildings_atari_missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_atari_missle.jpg
+- name: oldcabin-store-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-blue-granite.jpg
+- name: mediterranean-mediterranean-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-colored-circuits.jpg
+- name: oldhouse-oldhouse-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-propaganda-leaflets.jpg
+- name: old-door-lock-old-door-lock-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-wols.jpg
+- name: bordercrossing-bordercrossing-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-umberto-bocc.jpg
+- name: oldcabin-store-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-crunch-paper.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-colorful-blocks.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-colorful-blocks.png
+- name: soldier-kneeling-26304845730-d4e495e25f-o-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-wols.jpg
+- name: machine-road-machine-road.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road.jpg
+- name: oldsmallboat-oldsmallboat-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-blue-granite.jpg
 ---
 Heavy Snow Expected On New Year's Day Throughout Northern Utah.&nbsp;Meetings And Support Groups.&nbsp;Philadelphia Names 1st Black Female Police Chief.&nbsp;Meet The Senior Producer Of Kelly Strayhorn Theater.&nbsp;Celebrate The New Year With Fireworks Safely And Legally.&nbsp;Congressman John Lewis Says Cancer Is His Latest Battle.&nbsp;As Robots Take Over Warehousing, Workers Pushed To Adapt.&nbsp;Garbers Big Day Leads Cal Past Illinois In Redbox Bowl.&nbsp;
